--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:https": "node -e \"const ngrok = require('ngrok'); (async () => { const url = await ngrok.connect(3000); console.log('🚀 HTTPS URL:', url); console.log('📱 Use this URL to test VAPI voice features'); })();\" & npm run dev",
+    "ngrok": "ngrok http 3000",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.11",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/pdfkit": "^0.17.3",
     "@vapi-ai/web": "^2.3.9",
     "ai": "^5.0.27",
     "class-variance-authority": "^0.7.1",
@@ -21,8 +25,11 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.542.0",
+    "mammoth": "^1.11.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "pdfkit": "^0.17.2",
+    "puppeteer": "^24.22.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
@@ -39,6 +46,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "ngrok": "^5.0.0-beta.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
